# ApprentiPhylo

./: .gitignore  LABEL_INVERSION_FIX.md  MODIFICATIONS_THRESHOLD.md  README.md  RUN2_RESET_GUARANTEES.md  Script_use.md  all_config_json_files.txt  all_config_json_files_config_dir.txt  app.py  combine_group_plots.py  computing_trees.sh  install.sh  plot_by_group_distance.py  plot_distances.py  preprocessing.sh  readme.md  rename_folders.py  requirements.txt  run_all_simulations.sh  setup.py
backup/: config_template.json  preprocess.py
backup/simulations-classifiers/: .gitignore  config_template.json  pyproject.toml  split_alignments.py
backup/simulations-classifiers/notebooks/: usage.ipynb
backup/simulations-classifiers/src/classifiers/: pipeline.py  train.py  utils.py
backup/simulations-classifiers/src/classifiers/classif/: cnn.py  deep_classifier.py  logistic_regression.py  torch_datasets.py
backup/simulations-classifiers/src/classifiers/classif/models/: dense_model.py
backup/simulations-classifiers/src/classifiers/data/: data.py  sources.py
backup/simulations-classifiers/src/classifiers/metrics/: lists.py  metrics.py
calcule_distance_in_tree/: plot_mammals.sh  plot_viridiplantae.sh  runs_3_model.sh  runs_mammals.sh  runs_viridiplantae.sh
dashboard/: app.py
data/: prot_mammals.tgz  prot_viridiplantae.tgz
logs/: pipeline_log.csv
mammals/: DSO78_frequencies.sh  JTT92_frequencies.sh  LG08_frequencies.sh  WAG_frequencies.sh  WAG_frequencies_posterior_extra_length.sh  WAG_frequencies_posterior_extra_length_data2.sh  WAG_frequencies_sampling_seq.sh  WAG_frequencies_sampling_seq_data2.sh  WAG_sampling_seq.sh  WAG_sampling_seq_data2.sh
plots_two_dimension/: app.py  rename_folders.py
script_for_esmsimulator/: simulateGillespie.py
scripts/: alignment_description.py  analyse_classif.py  analyse_predictions.py  analyse_predictions_plotly.py  build_dashboard_dataset.py  classification.py  compute_tree.py  dashboard.py  dashboard2.py  data_description.py  data_description2.py  description_data.py  filter_mono.py  fix_logreg_history.py  main.py  main2.py  mapping.py  phylo_metrics.py  preprocess.py  preprocessing_dataset.py  report.py  (+3 more)
(+7570 files in other folders)
